--- a/web/tmpl/GEvo.tmpl
+++ b/web/tmpl/GEvo.tmpl
@@ -310,7 +310,7 @@ Note: parameter options haven't been implemented for blastz (yet)
 <br>Note: Word size limited to 3 for tblastx
 </DIV> 
 <td width="3" bgcolor="#99FF99">
-<td> Select sequence to which all other sequences will be compared:<br>
+<td> Select reference sequence(s) to which all other sequences will be compared:<br>
 <TMPL_LOOP NAME="REF_SEQ">
 <font class ="small">Sequence <TMPL_VAR NAME=SEQ_NUM>: 
 <label><input class="backbox" type="radio" name="ref_seq<TMPL_VAR NAME=SEQ_NUM>" id="ref_seq<TMPL_VAR NAME=SEQ_NUM>" tabindex="22" value="1" checked />On</label>
