added option for coloring N's orange

--- a/web/tmpl/GEvo.tmpl
+++ b/web/tmpl/GEvo.tmpl
@@ -438,6 +438,14 @@ Note: parameter options haven't been implemented for blastz (yet)
   </TD>
  <TR>
   <Td>
+<font class="small">Color N orange? (SLOW)</font>
+  <td>
+<label class="small"><input class="backbox" type="radio" name="show_nt" id="show_nt" tabindex="1" value="1" />Yes</label>
+<label class=small><input class="backbox" type="radio" name="show_nt" id="show_nt" tabindex="1" value="0" checked />No</label>
+    </DIV>
+  </TD>
+ <TR>
+  <Td>
 <font class="small">Auto adjust overlapping features? </font>
   <td>
   <label class="small"><input class="backbox" type="radio" name="overlap_adjustment" id="overlap_adjustment" tabindex="1" value="0" />Yes</label>
